assets/css/style.css
@font-face {
    font-family: 'Inconsolata';
    font-style: normal;
    font-weight: 400;
    src: local("Inconsolata"), url("//fonts.gstatic.com/s/inconsolata/v12/BjAYBlHtW3CJxDcjzrnZCIbN6UDyHWBl620a-IRfuBk.woff") format("woff")
}

@font-face {
    font-family: 'Inconsolata';
    font-style: normal;
    font-weight: 700;
    src: local("Inconsolata Bold"), local("Inconsolata-Bold"), url("//fonts.gstatic.com/s/inconsolata/v12/AIed271kqQlcIRSOnQH0yTqR_3kx9_hJXbbyU8S6IN0.woff") format("woff")
}

@font-face {
    font-family: 'icons';
    src: url("../fonts/icons.eot?9273991");
    src: url("../fonts/icons.eot?9273991#iefix") format("embedded-opentype"), url("../fonts/icons.woff?9273991") format("woff"), url("../fonts/icons.ttf?9273991") format("truetype"), url("../fonts/icons.svg?9273991#icons") format("svg");
    font-weight: normal;
    font-style: normal
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
    font-family: "icons";
    font-style: normal;
    font-weight: normal;
    speak: none;
    display: inline-block;
    text-decoration: inherit;
    width: 1em;
    margin-right: .2em;
    text-align: center;
    font-variant: normal;
    text-transform: none;
    line-height: 1em;
    margin-left: .2em;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

.icon-star:before {
    content: '\e800'
}

.icon-location:before {
    content: '\e801'
}

.icon-arrow-left:before {
    content: '\e804'
}

.icon-link:before {
    content: '\e806'
}

.icon-arrow-right:before {
    content: '\e807'
}

.icon-rss:before {
    content: '\e808'
}

.icon-menu:before {
    content: '\e809'
}

.icon-gplus:before {
    content: '\e80a'
}

.icon-facebook:before {
    content: '\e80b'
}

.icon-twitter:before {
    content: '\e80c'
}

body {
    font: 300 1em / 1.5em 'Roboto', sans-serif;
    color: #333;
}

::-moz-selection,
::-moz-selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none
}

::-moz-selection,
::selection {
    color: #222;
    background: #D6EDFF;
    text-shadow: none
}

a {
    color: inherit;
    text-decoration: none;
    font-weight: 400;
    transition: all ease-out 0.2s
}

a:hover,
a:focus {
    color: #1F2026
}

.post-content a {
    border-bottom: 1px solid rgba(255, 81, 47, 0.5)
}

.post-content a:hover,
.post-content a:focus {
    border-color: #DD2476
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-rendering: optimizeLegibility;
    color: #1F2026
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
    font-weight: inherit
}

h1 {
    font-size: 2em;
    line-height: 1em;
    margin: 2em 0 -0.5em
}

h2 {
    font-size: 1.75em;
    line-height: 1.143em;
    margin: 2.286em 0 -0.571em
}

h3 {
    font-size: 1.5em;
    line-height: 1.334em;
    margin: 2em 0 -0.667em
}

h4 {
    font-size: 1.25em;
    line-height: 1.2em;
    margin: 2.4em 0 -0.8em
}

p {
    margin: 2em auto
}

ul {
    list-style: none
}

li {
    position: relative
}

ul>li:before,
ol>li:before {
    position: absolute;
    width: 2em;
    margin-left: -3em;
    font-size: 1em;
    font-weight: 400;
    line-height: 1.5em;
    text-align: right;
    color: #1F2026
}

ul>li:before {
    margin-top: 0.125em;
    content: '*'
}

ol {
    list-style-type: none;
    counter-reset: item
}

ol>li:before {
    content: counter(item) ". " !important;
    counter-increment: item
}

ol,
ul {
    padding-left: 3em;
    margin: 2em auto
}

ol ol,
ol ul,
ul ol,
ul ul {
    padding-left: 1.5em;
    margin: 1em auto
}

dl {
    margin: 2em auto
}

dl dt {
    font-size: 0.875em;
    line-height: 1.143em;
    font-weight: 700;
    margin-bottom: 0.571em;
    color: #1F2026
}

dl dd {
    margin-left: 1em;
    margin-bottom: 1.5em
}

hr {
    display: block;
    height: 1px;
    margin: 2em 0;
    padding: 0;
    background: #E1E2E6;
    border: 0
}

blockquote {
    margin: 2em auto;
    padding: 0 1em;
    box-sizing: border-box;
    border-left: 0.25em solid #D4D5D9;
    font-style: italic;
    font-weight: 400;
    color: #595B66;
    background: transparent
}

blockquote * {
    margin: 1em auto
}

blockquote *:first-child {
    margin-top: 0
}

blockquote *:last-child {
    margin-bottom: 0
}

em,
i {
    font-weight: 400;
    font-style: italic;
    color: #363740
}

strong,
b {
    font-weight: 700;
    color: #363740
}

small {
    font-size: 0.9em
}

mark {
    background-color: #FFC336
}

code,
tt {
    display: inline-block;
    position: relative;
    top: -1px;
    padding: 3px 6px;
    margin: -1px 2px;
    font-family: 'Inconsolata', monospace;
    font-size: 0.875em;
    line-height: 1.143em;
    white-space: pre;
    background: #E1E2E6;
    color: #000;
    font-weight: 400;
    border-radius: 2px
}

pre {
    margin: 2em auto;
    width: 100%;
    padding: 1em;
    font-family: 'Inconsolata', monospace;
    white-space: pre;
    overflow: auto;
    background: #9D9FA6;
    color: #fff;
    box-sizing: border-box
}

pre code,
pre tt {
    position: static;
    top: auto;
    font-size: 1em;
    line-height: 1.5em;
    white-space: -moz-pre-wrap;
    white-space: pre-wrap;
    vertical-align: inherit;
    border: none;
    padding: 0;
    background: transparent
}

pre.codeblock {
    position: relative;
    padding: 1em;
    overflow: hidden
}

pre.codeblock code {
    display: block;
    border: 0;
    padding: 1.5em;
    padding-left: 4em;
    margin: -1em;
    white-space: inherit;
    overflow-x: scroll;
    background: #E1E2E6
}

pre.codeblock .lines {
    position: absolute;
    width: 3em;
    height: 100%;
    left: 0;
    top: 0;
    padding: 1.5em 0;
    border-right: 1px solid #D4D5D9;
    font-size: 1em;
    line-height: 1.5em;
    text-align: right;
    box-sizing: border-box;
    background: #E1E2E6;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default
}

pre.codeblock .lines .line {
    display: block;
    padding-right: 0.5em;
    color: #9D9FA6
}
/* ... */

